# substreams-sink-kafka-messages

./: .sfreleaser  Cargo.toml  README.md  go.mod  substreams.yaml
pb/gldeng/substreams/sink/kafka/v1/: kafka.pb.go
proto/: buf.yaml
proto/gldeng/substreams/sink/kafka/v1/: kafka.proto
src/: extensions.rs  lib.rs  topics.rs
src/pb/: gldeng.substreams.sink.kafka.v1.rs  mod.rs
